[WebGPU] CTS validation/render_pipeline/misc.html is failing https://bugs.webkit.org/show_bug.cgi?id=266734 <radar://119958255>

Reviewed by Tadeu Zagallo.

Correct pipeline device mismatch which was preventing this test from passing.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/render_pipeline/misc-expected.txt:
Add passing expectations.

* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::Device::createRenderPipeline):

Canonical link: https://commits.webkit.org/272639@main